--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         <section class="hébergementPopulaire"> 
           <div class="hebergement_populaire">
            <div class="hebergement_populaire_titre_icon">
-         <div class="hebergement_populaire_titre"><h2 class="">Les plus populaire</div>
-           <div><i class="fa fa-line-chart"></i></h2></div>
+         <div class="hebergement_populaire_titre"><h2>Les plus populaire</h2></div>
+           <div><i class="fa fa-line-chart"></i></div>
            </div>
          
             <div class="hebergementcartepopulaire">
