--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       
       <div class="taillelien flexaround">
 
-        <div><a class="couleurbleu1 decorationnone navbordure" href="#hebergement">Hébergements</a></div>
+        <div><a class="hover_bleu_border decorationnone navbordure" href="#hebergement">Hébergements</a></div>
 
-        <div><a class="couleur decorationnone" href="#activité">Activités</a></div>
+        <div><a class="hover_bleu_border decorationnone" href="#activité">Activités</a></div>
 
         <div><a class="couleurbleu1 decorationnone" href="#">S'inscrire</a></div>
       </div>
